objects/pi__ObjectChangeLog__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>pi__ObjectEmail__c</fullName>
        <label>Object Email</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectFid__c</fullName>
        <label>Object Fid</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectMasterRecordEmail__c</fullName>
        <label>Object Master Record Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectMasterRecordId__c</fullName>
        <label>Object Master Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectState__c</fullName>
        <label>Object State</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__ObjectType__c</fullName>
        <label>Object Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ObjectChangeLog</label>
    <listViews>
        <fullName>Nolan_Daigle_ObjectChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>pi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectChangeLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>